--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
     <link rel="stylesheet" href="/src/main.css" />
   </head>
   <body class="antialiased bg-[#161616] text-gray-100 font-sans">
+  <!-- Dynamic page background layers (parallax on scroll) - shapes are square now (bg-inner restored) -->
+    <div id="page-bg" class="page-bg" aria-hidden="true">
+      <div class="bg-layer" data-speed="0.08" style="left:6%; top:8%; width:24rem; height:24rem;">
+        <div class="bg-inner" aria-hidden="true"></div>
+      </div>
+      <div class="bg-layer" data-speed="0.04" style="right:6%; top:40%; width:20rem; height:20rem;">
+        <div class="bg-inner" aria-hidden="true"></div>
+      </div>
+      <div class="bg-layer" data-speed="0.12" style="left:28%; top:70%; width:18rem; height:18rem;">
+        <div class="bg-inner" aria-hidden="true"></div>
+      </div>
+      <div class="bg-layer" data-speed="0.06" style="right:22%; top:6%; width:22rem; height:22rem;">
+        <div class="bg-inner" aria-hidden="true"></div>
+      </div>
+    </div>
     <header class="fixed top-0 left-0 right-0 z-40 bg-gradient-to-b from-[#161616]/80 to-transparent backdrop-blur-md">
       <div class="max-w-6xl mx-auto px-6 py-4 flex items-center justify-between">
         <div class="flex items-center gap-4">
@@ -28,9 +43,17 @@
       </div>
     </header>
 
-    <main class="pt-24">
-      <section class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-8 items-center min-h-[72vh]">
-        <div class="space-y-6">
+  <main class="pt-24 bg-grid">
+      <section class="hero relative overflow-hidden">
+        <div class="absolute inset-0 pointer-events-none hero-bg">
+          <img src="/assets/placeholders/hero1.svg" alt="Hero background" class="w-full h-full object-cover opacity-40" />
+          <div class="particles" aria-hidden="true"></div>
+          <img src="/assets/characters/char1.svg" alt="Character placeholder" class="hero-layer" data-depth="0.18" />
+          <img src="/assets/characters/char2.svg" alt="Character placeholder" class="hero-layer" data-depth="0.34" />
+        </div>
+
+        <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-8 items-center min-h-[72vh] relative z-10">
+          <div class="space-y-6">
           <h1 class="text-4xl md:text-5xl font-extrabold leading-tight">
             Best App to Earn Free Gift Cards & Game Rewards
             <span class="block text-[#85e2d9] animate-typing mt-2">by playing games</span>
@@ -39,7 +62,7 @@
 
           <p class="text-sm text-gray-400 max-w-xl">We help gamers get rewards without spending real money. Complete quests, watch short videos, or play partner games to collect Gold and redeem it for gift cards and in-game items.</p>
 
-          <div class="mt-6 flex items-center gap-6">
+          <div class="mt-6 flex items-center gap-6 reveal">
             <div class="logos-marquee overflow-hidden w-full">
               <div class="logos flex items-center gap-8 will-change-transform">
                 <img src="/rewards/steam.svg" alt="Steam logo" class="h-8 opacity-90" />
@@ -52,12 +75,12 @@
             </div>
           </div>
 
-          <div class="mt-8 text-center md:text-left">
+          <div class="mt-8 text-center md:text-left reveal">
             <p class="text-sm">More than <strong class="text-white">$<span id="amount">0</span></strong> have already been paid since 2022</p>
           </div>
         </div>
 
-        <aside class="bg-[#111111] rounded-xl p-6 shadow-xl drop-shadow-lg">
+  <aside class="bg-[#111111] rounded-xl p-6 shadow-xl drop-shadow-lg neon-glow reveal">
           <h3 class="text-lg text-[#85e2d9] font-semibold">Sign up now and earn <strong>25 Gold</strong></h3>
           <form id="signup" class="mt-4 space-y-4" aria-label="Signup form">
             <label class="block">
@@ -73,7 +96,7 @@
               <input name="confirm" type="password" required placeholder="Confirm password" class="input-field" />
             </label>
 
-            <button class="btn-primary w-full" type="submit">Start Earning Prizes</button>
+            <button class="btn-primary w-full neon-glow" type="submit">Start Earning Prizes</button>
             <div class="text-center text-sm text-gray-400">or</div>
             <button type="button" class="btn-outline w-full flex items-center justify-center gap-3"> <img src="/assets/google.svg" alt="Google" class="h-5"/> Sign up with Google</button>
             <p class="text-xs text-gray-500 mt-2">By signing up you agree to the <a href="#" class="text-[#85e2d9] underline">Terms of Service</a> and <a href="#" class="text-[#85e2d9] underline">Privacy Policy</a>.</p>
@@ -81,22 +104,22 @@
         </aside>
       </section>
 
-      <section id="how-it-works" class="bg-[#0f0f0f] py-16">
+  <section id="how-it-works" class="bg-[#0f0f0f] py-16">
         <div class="max-w-6xl mx-auto px-6">
           <div class="grid md:grid-cols-3 gap-8">
-            <article class="step p-6 bg-[#111111] rounded-lg">
+    <article class="step p-6 bg-[#111111] rounded-lg reveal">
               <img src="/assets/step1.svg" alt="Complete Quests illustration" class="h-28 mx-auto" />
               <h3 class="mt-4 font-semibold">Step 1 – Complete Quests</h3>
               <p class="text-sm text-gray-400">Complete simple quests that reward instantly, such as downloading a game or app, watching videos, or completing partner game tasks.</p>
             </article>
 
-            <article class="step p-6 bg-[#111111] rounded-lg">
+            <article class="step p-6 bg-[#111111] rounded-lg reveal">
               <img src="/assets/step2.svg" alt="Redeem illustration" class="h-28 mx-auto" />
               <h3 class="mt-4 font-semibold">Step 2 – Redeem your Prize</h3>
               <p class="text-sm text-gray-400">Exchange your Gold for gift cards, credits, currencies, items, and premium subscriptions in online games.</p>
             </article>
 
-            <article class="step p-6 bg-[#111111] rounded-lg">
+            <article class="step p-6 bg-[#111111] rounded-lg reveal">
               <img src="/assets/step3.svg" alt="Community illustration" class="h-28 mx-auto" />
               <h3 class="mt-4 font-semibold">Step 3 – Join the community!</h3>
               <p class="text-sm text-gray-400">Many users continue completing quests, collecting Gold, and exchanging it for various prizes. Never spend real money on games again!</p>
@@ -111,17 +134,17 @@
           <p class="text-gray-400 mt-2">Earn free Xbox gift cards, starting at $5 and $10, by completing simple quests. Redeem your gift card on the Xbox or Microsoft store to buy new games, DLC, and more.</p>
 
           <div class="mt-8 grid md:grid-cols-3 gap-6">
-            <article class="p-6 bg-[#111111] rounded-lg">
+            <article class="p-6 bg-[#111111] rounded-lg reveal card">
               <h3 class="font-semibold">$5+ Google Play Gift card</h3>
               <p class="text-sm text-gray-400 mt-2">Get a $5 Google Play Gift Card and other values to buy in-game items or premium subscriptions.</p>
             </article>
 
-            <article class="p-6 bg-[#111111] rounded-lg">
+            <article class="p-6 bg-[#111111] rounded-lg reveal card">
               <h3 class="font-semibold">Get Amazon Rewards Gift Card</h3>
               <p class="text-sm text-gray-400 mt-2">Use your Amazon Gift Card to buy headsets, keyboards, or gaming mice. Redeem the code in your Amazon.com account.</p>
             </article>
 
-            <article class="p-6 bg-[#111111] rounded-lg">
+            <article class="p-6 bg-[#111111] rounded-lg reveal card">
               <h3 class="font-semibold">Free Valorant Gift cards</h3>
               <p class="text-sm text-gray-400 mt-2">Unlock new skins and Battle Passes with a free Valorant gift card.</p>
             </article>
@@ -134,7 +157,7 @@
           <h2 class="text-2xl font-bold">Popular Quests</h2>
           <div class="grid md:grid-cols-3 gap-6 mt-6">
             <!-- Sample static cards -->
-            <div class="card p-4 bg-[#111111] rounded-lg">
+            <div class="card p-4 bg-[#111111] rounded-lg reveal">
               <div class="flex items-center justify-between">
                 <h4 class="font-semibold">Install Game X</h4>
                 <div class="text-sm text-[#85e2d9]">9k Gold</div>
@@ -142,7 +165,7 @@
               <p class="text-xs text-gray-400 mt-2">Exchange for $50 Google Play Gift card</p>
             </div>
 
-            <div class="card p-4 bg-[#111111] rounded-lg">
+            <div class="card p-4 bg-[#111111] rounded-lg reveal">
               <div class="flex items-center justify-between">
                 <h4 class="font-semibold">Watch Short Ads</h4>
                 <div class="text-sm text-[#85e2d9]">1.2k Gold</div>
@@ -150,7 +173,7 @@
               <p class="text-xs text-gray-400 mt-2">Exchange for $5 Google Play Gift card</p>
             </div>
 
-            <div class="card p-4 bg-[#111111] rounded-lg">
+            <div class="card p-4 bg-[#111111] rounded-lg reveal">
               <div class="flex items-center justify-between">
                 <h4 class="font-semibold">Complete Level</h4>
                 <div class="text-sm text-[#85e2d9]">4.5k Gold</div>
@@ -232,6 +255,7 @@
       </div>
     </footer>
 
-    <script type="module" src="/src/main.js"></script>
+  <script type="module" src="/src/main.js"></script>
+  <!-- touch to trigger HMR -->
   </body>
 </html>
