--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="bg-inner" aria-hidden="true"></div>
       </div>
     </div>
-    <header class="fixed top-0 left-0 right-0 z-40 bg-gradient-to-b from-[#161616]/80 to-transparent backdrop-blur-md">
+  <header class="fixed top-0 left-0 right-0 z-40 bg-gradient-to-b from-[#161616]/80 to-transparent backdrop-blur-md">
       <div class="max-w-6xl mx-auto px-6 py-4 flex items-center justify-between">
         <div class="flex items-center gap-4">
           <img src="/assets/logo.svg" alt="GamePrizes.net logo" class="h-8 w-auto" />
@@ -36,9 +36,9 @@
             <a class="anchor" href="#faq">FAQ</a>
           </nav>
         </div>
-        <div class="flex items-center gap-3">
+          <div class="flex items-center gap-3">
           <button class="btn-outline">Login</button>
-          <button class="btn-primary">Register</button>
+          <button class="btn-gray">Register</button>
         </div>
       </div>
     </header>
