--- a/index.html
+++ b/index.html
@@ -6,34 +6,45 @@
     <title>GAMEPRIZES.NET — Earn Free Gift Cards & Game Rewards</title>
     <meta name="description" content="Best app to earn free gift cards and game rewards by playing games — earn Robux, Valorant, Google Play, Amazon, Steam, PSN & Xbox gift cards starting at $5." />
     <meta name="keywords" content="apps to earn robux gift cards, game rewards app free, 10 dollar ps5 gift card, $5 google play gift card, amazon rewards gift card, codes for xbox 1 games, free earn get Xbox gift cards" />
+    <meta property="og:title" content="GAMEPRIZES.NET — Earn Free Gift Cards & Game Rewards" />
+    <meta property="og:description" content="Earn free Robux, Valorant Points, Google Play, Amazon, Steam, PSN & Xbox gift cards starting at $5 by completing quests." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gameprizes.net" />
+    <meta property="og:image" content="https://gameprizes.net/assets/placeholders/hero1.svg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="GAMEPRIZES.NET — Earn Free Gift Cards & Game Rewards" />
+    <meta name="twitter:description" content="Best app to earn free gift cards & game rewards by playing games." />
+    <meta name="theme-color" content="#161616" />
     <link rel="icon" href="/assets/logo.svg" />
+    <link rel="preload" href="/assets/logo.svg" as="image" />
     <link rel="stylesheet" href="/src/main.css" />
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "GamePrizes.net",
+      "url": "https://gameprizes.net",
+      "description": "Platform to earn free gift cards & game rewards by completing quests.",
+      "inLanguage": "en-US"
+    }
+    </script>
   </head>
   <body class="antialiased bg-[#161616] text-gray-100 font-sans">
-  <!-- Dynamic page background layers (parallax on scroll) - shapes are square now (bg-inner restored) -->
-    <div id="page-bg" class="page-bg" aria-hidden="true">
-      <div class="bg-layer" data-speed="0.08" style="left:6%; top:8%; width:24rem; height:24rem;">
-        <div class="bg-inner" aria-hidden="true"></div>
-      </div>
-      <div class="bg-layer" data-speed="0.04" style="right:6%; top:40%; width:20rem; height:20rem;">
-        <div class="bg-inner" aria-hidden="true"></div>
-      </div>
-      <div class="bg-layer" data-speed="0.12" style="left:28%; top:70%; width:18rem; height:18rem;">
-        <div class="bg-inner" aria-hidden="true"></div>
-      </div>
-      <div class="bg-layer" data-speed="0.06" style="right:22%; top:6%; width:22rem; height:22rem;">
-        <div class="bg-inner" aria-hidden="true"></div>
-      </div>
-    </div>
   <header class="fixed top-0 left-0 right-0 z-40 bg-gradient-to-b from-[#161616]/80 to-transparent backdrop-blur-md">
       <div class="max-w-6xl mx-auto px-6 py-4 flex items-center justify-between">
         <div class="flex items-center gap-4">
           <img src="/assets/logo.svg" alt="GamePrizes.net logo" class="h-8 w-auto" />
-          <nav class="hidden md:flex gap-4 text-sm">
+          <nav class="hidden md:flex gap-4 text-sm" aria-label="Main navigation">
             <a class="anchor" href="#how-it-works">How it works</a>
-            <a class="anchor" href="#rewards">Rewards</a>
-            <a class="anchor" href="#popular">Popular Quests</a>
+            <a class="anchor" href="#xbox">Xbox</a>
+            <a class="anchor" href="#google-play">Google Play</a>
+            <a class="anchor" href="#amazon">Amazon</a>
+            <a class="anchor" href="#valorant">Valorant</a>
+            <a class="anchor" href="#mmo">MMO</a>
+            <a class="anchor" href="#popular">Quests</a>
+            <a class="anchor" href="#testimonials">Reviews</a>
             <a class="anchor" href="#faq">FAQ</a>
+            <a class="anchor" href="#video">Video</a>
           </nav>
         </div>
           <div class="flex items-center gap-3">
@@ -46,10 +57,10 @@
   <main class="pt-24 bg-grid">
       <section class="hero relative overflow-hidden">
         <div class="absolute inset-0 pointer-events-none hero-bg">
-          <img src="/assets/placeholders/hero1.svg" alt="Hero background" class="w-full h-full object-cover opacity-40" />
+          <img src="/assets/placeholders/hero1.svg" alt="Stylized gaming hero background" class="w-full h-full object-cover opacity-40" loading="lazy" />
           <div class="particles" aria-hidden="true"></div>
-          <img src="/assets/characters/char1.svg" alt="Character placeholder" class="hero-layer" data-depth="0.18" />
-          <img src="/assets/characters/char2.svg" alt="Character placeholder" class="hero-layer" data-depth="0.34" />
+          <img src="/assets/characters/char1.svg" alt="Hero character 1" class="hero-layer" data-depth="0.18" loading="lazy" />
+          <img src="/assets/characters/char2.svg" alt="Hero character 2" class="hero-layer" data-depth="0.34" loading="lazy" />
         </div>
 
         <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-8 items-center min-h-[72vh] relative z-10">
@@ -58,19 +69,19 @@
             Best App to Earn Free Gift Cards & Game Rewards
             <span class="block text-[#85e2d9] animate-typing mt-2">by playing games</span>
           </h1>
-          <h2 class="text-lg text-gray-300">Earn Free Robux, Valorant, Google Play, Amazon, Steam, PSN & Xbox Gift cards of $5 $10 $25 $50 $100, as well a lot of rewards in Online games and MMOs</h2>
+          <h2 class="text-lg text-gray-300">Earn <strong>Free Robux</strong>, <strong>Valorant</strong>, <strong>Google Play</strong>, <strong>Amazon</strong>, <strong>Steam</strong>, <strong>PSN</strong> & <strong>Xbox gift cards</strong> of $5 $10 $25 $50 $100, as well a lot of rewards in Online games and MMOs</h2>
 
           <p class="text-sm text-gray-400 max-w-xl">We help gamers get rewards without spending real money. Complete quests, watch short videos, or play partner games to collect Gold and redeem it for gift cards and in-game items.</p>
 
           <div class="mt-6 flex items-center gap-6 reveal">
             <div class="logos-marquee overflow-hidden w-full">
               <div class="logos flex items-center gap-8 will-change-transform">
-                <img src="/rewards/steam.svg" alt="Steam logo" class="h-8 opacity-90" />
-                <img src="/rewards/nintendo.svg" alt="Nintendo logo" class="h-8 opacity-90" />
-                <img src="/rewards/xbox.svg" alt="Xbox logo" class="h-8 opacity-90" />
-                <img src="/rewards/amazon.svg" alt="Amazon logo" class="h-8 opacity-90" />
-                <img src="/rewards/play.svg" alt="Google Play logo" class="h-8 opacity-90" />
-                <img src="/rewards/steam.svg" alt="Steam logo" class="h-8 opacity-90" />
+                <img src="/rewards/steam.svg" alt="Steam logo" class="h-8 opacity-90" loading="lazy" />
+                <img src="/rewards/nintendo.svg" alt="Nintendo logo" class="h-8 opacity-90" loading="lazy" />
+                <img src="/rewards/xbox.svg" alt="Xbox logo" class="h-8 opacity-90" loading="lazy" />
+                <img src="/rewards/amazon.svg" alt="Amazon logo" class="h-8 opacity-90" loading="lazy" />
+                <img src="/rewards/play.svg" alt="Google Play logo" class="h-8 opacity-90" loading="lazy" />
+                <img src="/rewards/steam.svg" alt="Steam logo" class="h-8 opacity-90" loading="lazy" />
               </div>
             </div>
           </div>
@@ -96,9 +107,9 @@
               <input name="confirm" type="password" required placeholder="Confirm password" class="input-field" />
             </label>
 
-            <button class="btn-primary w-full neon-glow" type="submit">Start Earning Prizes</button>
+            <button class="btn-primary w-full neon-glow" type="submit" aria-label="Start earning free game rewards">Start Earning Prizes</button>
             <div class="text-center text-sm text-gray-400">or</div>
-            <button type="button" class="btn-outline w-full flex items-center justify-center gap-3"> <img src="/assets/google.svg" alt="Google" class="h-5"/> Sign up with Google</button>
+            <button type="button" class="btn-outline w-full flex items-center justify-center gap-3"> <img src="/assets/google.svg" alt="Google icon" class="h-5" loading="lazy"/> Sign up with Google</button>
             <p class="text-xs text-gray-500 mt-2">By signing up you agree to the <a href="#" class="text-[#85e2d9] underline">Terms of Service</a> and <a href="#" class="text-[#85e2d9] underline">Privacy Policy</a>.</p>
           </form>
         </aside>
@@ -108,19 +119,19 @@
         <div class="max-w-6xl mx-auto px-6">
           <div class="grid md:grid-cols-3 gap-8">
     <article class="step p-6 bg-[#111111] rounded-lg reveal">
-              <img src="/assets/step1.svg" alt="Complete Quests illustration" class="h-28 mx-auto" />
+              <img src="/assets/step1.svg" alt="Complete quests illustration" class="h-28 mx-auto" loading="lazy" />
               <h3 class="mt-4 font-semibold">Step 1 – Complete Quests</h3>
               <p class="text-sm text-gray-400">Complete simple quests that reward instantly, such as downloading a game or app, watching videos, or completing partner game tasks.</p>
             </article>
 
             <article class="step p-6 bg-[#111111] rounded-lg reveal">
-              <img src="/assets/step2.svg" alt="Redeem illustration" class="h-28 mx-auto" />
+              <img src="/assets/step2.svg" alt="Redeem prize illustration" class="h-28 mx-auto" loading="lazy" />
               <h3 class="mt-4 font-semibold">Step 2 – Redeem your Prize</h3>
               <p class="text-sm text-gray-400">Exchange your Gold for gift cards, credits, currencies, items, and premium subscriptions in online games.</p>
             </article>
 
             <article class="step p-6 bg-[#111111] rounded-lg reveal">
-              <img src="/assets/step3.svg" alt="Community illustration" class="h-28 mx-auto" />
+              <img src="/assets/step3.svg" alt="Join community illustration" class="h-28 mx-auto" loading="lazy" />
               <h3 class="mt-4 font-semibold">Step 3 – Join the community!</h3>
               <p class="text-sm text-gray-400">Many users continue completing quests, collecting Gold, and exchanging it for various prizes. Never spend real money on games again!</p>
             </article>
@@ -128,27 +139,35 @@
         </div>
       </section>
 
-      <section id="rewards" class="py-16">
+      <!-- Individual reward SEO sections -->
+      <section id="xbox" class="py-16">
         <div class="max-w-6xl mx-auto px-6">
           <h2 class="text-2xl font-bold">Free Xbox Gift Cards</h2>
-          <p class="text-gray-400 mt-2">Earn free Xbox gift cards, starting at $5 and $10, by completing simple quests. Redeem your gift card on the Xbox or Microsoft store to buy new games, DLC, and more.</p>
-
-          <div class="mt-8 grid md:grid-cols-3 gap-6">
-            <article class="p-6 bg-[#111111] rounded-lg reveal card">
-              <h3 class="font-semibold">$5+ Google Play Gift card</h3>
-              <p class="text-sm text-gray-400 mt-2">Get a $5 Google Play Gift Card and other values to buy in-game items or premium subscriptions.</p>
-            </article>
-
-            <article class="p-6 bg-[#111111] rounded-lg reveal card">
-              <h3 class="font-semibold">Get Amazon Rewards Gift Card</h3>
-              <p class="text-sm text-gray-400 mt-2">Use your Amazon Gift Card to buy headsets, keyboards, or gaming mice. Redeem the code in your Amazon.com account.</p>
-            </article>
-
-            <article class="p-6 bg-[#111111] rounded-lg reveal card">
-              <h3 class="font-semibold">Free Valorant Gift cards</h3>
-              <p class="text-sm text-gray-400 mt-2">Unlock new skins and Battle Passes with a free Valorant gift card.</p>
-            </article>
-          </div>
+          <p class="text-gray-400 mt-2">Earn <strong>free Xbox gift cards</strong>, starting at $5 and $10, by completing simple quests. Redeem your gift card on the Xbox or Microsoft store to buy new games, DLC, and even movies or apps. It’s the easiest way to grow your gaming library.</p>
+        </div>
+      </section>
+      <section id="google-play" class="py-12 bg-[#0f0f0f]">
+        <div class="max-w-6xl mx-auto px-6">
+          <h2 class="text-2xl font-bold">$5+ Google Play Gift card</h2>
+          <p class="text-gray-400 mt-2">Get a <strong>$5 Google Play Gift Card</strong> and others values as $10 $25 $50 to buy in-game items, new characters, or premium app subscriptions. Once you receive your card, enter the code in the Play Store to instantly add the balance and enhance your mobile experience.</p>
+        </div>
+      </section>
+      <section id="amazon" class="py-12">
+        <div class="max-w-6xl mx-auto px-6">
+          <h2 class="text-2xl font-bold">Get Amazon Rewards Gift Card</h2>
+          <p class="text-gray-400 mt-2">Use your <strong>Amazon rewards gift card</strong> to get any rewards and items you want. It's the perfect way to get a new headset, keyboard, or gaming mouse. Just redeem the code in your Amazon.com account to add the balance to your wallet.</p>
+        </div>
+      </section>
+      <section id="valorant" class="py-12 bg-[#0f0f0f]">
+        <div class="max-w-6xl mx-auto px-6">
+          <h2 class="text-2xl font-bold">Free Valorant Gift cards</h2>
+          <p class="text-gray-400 mt-2">Unlock new agent skins and Battle Passes with a <strong>free Valorant gift card</strong>. Use the code in the Valorant store to get VP, which you can spend on a new look for your favorite agent or the latest weapon cosmetics.</p>
+        </div>
+      </section>
+      <section id="mmo" class="py-12">
+        <div class="max-w-6xl mx-auto px-6">
+          <h2 class="text-2xl font-bold">MMO & Online Game Rewards</h2>
+          <p class="text-gray-400 mt-2">Level up your favorite online games and MMOs. We offer rewards for a wide range of titles like Second Life Lindens free, Runescape Gold and subscription, World of Warcraft, Guild Wars 2, and much more.</p>
         </div>
       </section>
 
@@ -184,6 +203,37 @@
         </div>
       </section>
 
+      <!-- Trustpilot / Testimonials -->
+      <section id="testimonials" class="py-16">
+        <div class="max-w-6xl mx-auto px-6">
+          <h2 class="text-2xl font-bold">What Players Say</h2>
+          <p class="text-gray-400 mt-2">Real reviews from our community. We value transparency & trust.</p>
+          <div class="mt-6 bg-[#111111] rounded-lg p-6 reveal">
+            <div class="flex flex-col md:flex-row md:items-center gap-6">
+              <div class="md:w-1/2 space-y-2 text-sm text-gray-400">
+                <p><strong class="text-[#85e2d9]">Trustpilot</strong> verified reviews help new users feel safe.</p>
+                <p class="text-xs">We are not affiliated with game publishers or platform holders. All trademarks belong to their respective owners.</p>
+                <p><a href="https://www.trustpilot.com/review/gameprizes.net" target="_blank" rel="noopener" class="underline text-[#85e2d9]">Read all reviews</a></p>
+              </div>
+              <div id="trustpilot-widget" class="flex-1 text-sm text-gray-500">
+                Trustpilot widget placeholder
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Video Section placeholder -->
+      <section id="video" class="py-16 bg-[#0f0f0f]">
+        <div class="max-w-6xl mx-auto px-6">
+          <h2 class="text-2xl font-bold">Watch How It Works</h2>
+            <p class="text-gray-400 mt-2">Short overview of how to earn free gift cards & game rewards.</p>
+            <div class="mt-6 aspect-video w-full max-w-3xl mx-auto bg-[#111111] border border-[#222] rounded-xl flex items-center justify-center text-gray-500 text-sm">
+              Institutional video placeholder
+            </div>
+        </div>
+      </section>
+
       <section id="faq" class="py-16">
         <div class="max-w-6xl mx-auto px-6">
           <h2 class="text-2xl font-bold">Frequently Asked Questions</h2>
@@ -196,15 +246,23 @@
               <h4 class="font-semibold">How do I redeem prizes?</h4>
               <p class="text-sm text-gray-400">Visit the Shop, choose a reward and exchange your Gold for gift cards or in-game items.</p>
             </div>
+            <div class="p-4 bg-[#111111] rounded-lg">
+              <h4 class="font-semibold">Is it really free?</h4>
+              <p class="text-sm text-gray-400">Yes. Offers are funded by advertisers & partners. You never pay real money to earn.</p>
+            </div>
+            <div class="p-4 bg-[#111111] rounded-lg">
+              <h4 class="font-semibold">When do new quests appear?</h4>
+              <p class="text-sm text-gray-400">New quests are added daily. Check back often for high value tasks.</p>
+            </div>
           </div>
         </div>
       </section>
 
-      <section class="py-16 bg-[#0f0f0f]">
+    <section class="py-16 bg-[#0f0f0f]">
         <div class="max-w-6xl mx-auto px-6 text-center">
           <h2 class="text-2xl font-bold">Earn Game rewards now!</h2>
           <p class="text-gray-400 mt-2">Join thousands of gamers earning rewards daily.</p>
-          <a href="#" class="btn-primary mt-6 inline-block">Earn Game rewards now!</a>
+      <a href="#signup" class="btn-primary mt-6 inline-block">Earn Game rewards now!</a>
         </div>
       </section>
     </main>
@@ -245,11 +303,11 @@
         <div>
           <h4 class="font-semibold">Social</h4>
           <div class="flex gap-3 mt-2">
-            <img src="/assets/discord.svg" alt="Discord" class="h-6" />
-            <img src="/assets/instagram.svg" alt="Instagram" class="h-6" />
-            <img src="/assets/youtube.svg" alt="YouTube" class="h-6" />
-            <img src="/assets/reddit.svg" alt="Reddit" class="h-6" />
-            <img src="/assets/tiktok.svg" alt="TikTok" class="h-6" />
+            <img src="/assets/discord.svg" alt="Discord" class="h-6" loading="lazy" />
+            <img src="/assets/instagram.svg" alt="Instagram" class="h-6" loading="lazy" />
+            <img src="/assets/youtube.svg" alt="YouTube" class="h-6" loading="lazy" />
+            <img src="/assets/reddit.svg" alt="Reddit" class="h-6" loading="lazy" />
+            <img src="/assets/tiktok.svg" alt="TikTok" class="h-6" loading="lazy" />
           </div>
         </div>
       </div>
