--- a/index.html
+++ b/index.html
@@ -140,35 +140,85 @@
       </section>
 
       <!-- Individual reward SEO sections -->
-      <section id="xbox" class="py-16">
-        <div class="max-w-6xl mx-auto px-6">
-          <h2 class="text-2xl font-bold">Free Xbox Gift Cards</h2>
-          <p class="text-gray-400 mt-2">Earn <strong>free Xbox gift cards</strong>, starting at $5 and $10, by completing simple quests. Redeem your gift card on the Xbox or Microsoft store to buy new games, DLC, and even movies or apps. It’s the easiest way to grow your gaming library.</p>
+  <section id="xbox" class="reward-section" data-bg="/assets/Sections/xbox.jpeg">
+        <div class="reward-bg" aria-hidden="true"></div>
+        <div class="inner max-w-6xl mx-auto px-6 h-full flex items-center">
+          <div class="panel-neon space-y-5">
+            <h2 class="section-title">Free Xbox Gift Cards</h2>
+            <p class="section-text">Earn <strong>free Xbox gift cards</strong>, starting at $5 and $10, by completing simple quests. Redeem your gift card on the Xbox or Microsoft store to buy new games, DLC, and even movies or apps. It’s the easiest way to grow your gaming library.</p>
+            <ul class="feature-badges">
+              <li>Instant Quests</li>
+              <li>$5 - $100</li>
+              <li>No Purchase</li>
+            </ul>
+          </div>
         </div>
+        <img src="/assets/shapes/joystick.svg" alt="Joystick shape" class="shape shape-a" loading="lazy" />
+        <img src="/assets/shapes/star.svg" alt="Star shape" class="shape shape-b" loading="lazy" />
       </section>
-      <section id="google-play" class="py-12 bg-[#0f0f0f]">
-        <div class="max-w-6xl mx-auto px-6">
-          <h2 class="text-2xl font-bold">$5+ Google Play Gift card</h2>
-          <p class="text-gray-400 mt-2">Get a <strong>$5 Google Play Gift Card</strong> and others values as $10 $25 $50 to buy in-game items, new characters, or premium app subscriptions. Once you receive your card, enter the code in the Play Store to instantly add the balance and enhance your mobile experience.</p>
+  <section id="google-play" class="reward-section alt" data-bg="/assets/Sections/googleplay.webp">
+        <div class="reward-bg" aria-hidden="true"></div>
+        <div class="inner max-w-6xl mx-auto px-6 h-full flex items-center justify-end">
+          <div class="panel-neon space-y-5">
+            <h2 class="section-title">$5+ Google Play Gift card</h2>
+            <p class="section-text">Get a <strong>$5 Google Play Gift Card</strong> and others values as $10 $25 $50 to buy in-game items, new characters, or premium app subscriptions. Once you receive your card, enter the code in the Play Store to instantly add the balance and enhance your mobile experience.</p>
+            <ul class="feature-badges">
+              <li>Mobile Games</li>
+              <li>Characters & Skins</li>
+              <li>Subscriptions</li>
+            </ul>
+          </div>
         </div>
+        <img src="/assets/shapes/levelup.svg" alt="Level up shape" class="shape shape-c" loading="lazy" />
+        <img src="/assets/shapes/star.svg" alt="Star shape" class="shape shape-d" loading="lazy" />
       </section>
-      <section id="amazon" class="py-12">
-        <div class="max-w-6xl mx-auto px-6">
-          <h2 class="text-2xl font-bold">Get Amazon Rewards Gift Card</h2>
-          <p class="text-gray-400 mt-2">Use your <strong>Amazon rewards gift card</strong> to get any rewards and items you want. It's the perfect way to get a new headset, keyboard, or gaming mouse. Just redeem the code in your Amazon.com account to add the balance to your wallet.</p>
+  <section id="amazon" class="reward-section" data-bg="/assets/Sections/amazon-background.jpg">
+        <div class="reward-bg" aria-hidden="true"></div>
+        <div class="inner max-w-6xl mx-auto px-6 h-full flex items-center">
+          <div class="panel-neon space-y-5">
+            <h2 class="section-title">Get Amazon Rewards Gift Card</h2>
+            <p class="section-text">Use your <strong>Amazon rewards gift card</strong> to get any rewards and items you want. It's the perfect way to get a new headset, keyboard, or gaming mouse. Just redeem the code in your Amazon.com account to add the balance to your wallet.</p>
+            <ul class="feature-badges">
+              <li>Hardware</li>
+              <li>Accessories</li>
+              <li>Fast Delivery</li>
+            </ul>
+          </div>
         </div>
+        <img src="/assets/shapes/trophy.svg" alt="Trophy shape" class="shape shape-e" loading="lazy" />
+        <img src="/assets/shapes/star.svg" alt="Star shape" class="shape shape-f" loading="lazy" />
       </section>
-      <section id="valorant" class="py-12 bg-[#0f0f0f]">
-        <div class="max-w-6xl mx-auto px-6">
-          <h2 class="text-2xl font-bold">Free Valorant Gift cards</h2>
-          <p class="text-gray-400 mt-2">Unlock new agent skins and Battle Passes with a <strong>free Valorant gift card</strong>. Use the code in the Valorant store to get VP, which you can spend on a new look for your favorite agent or the latest weapon cosmetics.</p>
+  <section id="valorant" class="reward-section alt" data-bg="/assets/Sections/valorant.jpg">
+        <div class="reward-bg" aria-hidden="true"></div>
+        <div class="inner max-w-6xl mx-auto px-6 h-full flex items-center justify-end">
+          <div class="panel-neon space-y-5">
+            <h2 class="section-title">Free Valorant Gift cards</h2>
+            <p class="section-text">Unlock new agent skins and Battle Passes with a <strong>free Valorant gift card</strong>. Use the code in the Valorant store to get VP, which you can spend on a new look for your favorite agent or the latest weapon cosmetics.</p>
+            <ul class="feature-badges">
+              <li>Battle Pass</li>
+              <li>Weapon Skins</li>
+              <li>Agents</li>
+            </ul>
+          </div>
         </div>
+        <img src="/assets/shapes/star.svg" alt="Star shape" class="shape shape-g" loading="lazy" />
+        <img src="/assets/shapes/joystick.svg" alt="Joystick shape" class="shape shape-h" loading="lazy" />
       </section>
-      <section id="mmo" class="py-12">
-        <div class="max-w-6xl mx-auto px-6">
-          <h2 class="text-2xl font-bold">MMO & Online Game Rewards</h2>
-          <p class="text-gray-400 mt-2">Level up your favorite online games and MMOs. We offer rewards for a wide range of titles like Second Life Lindens free, Runescape Gold and subscription, World of Warcraft, Guild Wars 2, and much more.</p>
+  <section id="mmo" class="reward-section" data-bg="/assets/Sections/mmo.jpg">
+        <div class="reward-bg" aria-hidden="true"></div>
+        <div class="inner max-w-6xl mx-auto px-6 h-full flex items-center">
+          <div class="panel-neon space-y-5">
+            <h2 class="section-title">MMO & Online Game Rewards</h2>
+            <p class="section-text">Level up your favorite online games and MMOs. We offer rewards for a wide range of titles like Second Life Lindens free, Runescape Gold and subscription, World of Warcraft, Guild Wars 2, and much more.</p>
+            <ul class="feature-badges">
+              <li>MMO Currencies</li>
+              <li>Subscriptions</li>
+              <li>Exclusive Items</li>
+            </ul>
+          </div>
         </div>
+        <img src="/assets/shapes/levelup.svg" alt="Level up shape" class="shape shape-i" loading="lazy" />
+        <img src="/assets/shapes/trophy.svg" alt="Trophy shape" class="shape shape-j" loading="lazy" />
       </section>
 
       <section id="popular" class="py-16 bg-[#0f0f0f]">
